--- a/css/styles.css
+++ b/css/styles.css
@@ -57,13 +57,13 @@ table {
 /* */
 * {
     box-sizing: border-box;
-    font-family: openSans;
+    font-family: 'Open Sans';
 }
 
 /* */
 body {
     margin: 0;
-    font-family: openSans;
+    font-family: 'Open Sans';
 }
 
 /* Navigation styling */
@@ -150,8 +150,11 @@ nav a {
 /* Main */
 .content {
     display:flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 10px;
+    background-color: rgb(#eeeeee);
 }
 
 /* Main container */
@@ -159,14 +162,68 @@ nav a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 350px;
+    width: 700px;
+    background-color: white;
+    box-shadow: 3px 3px 5px #ddd;
 }
 
 .topBox {
     display: flex;
     align-items: center;
+    color: white;
+    background-color: red;
+    width: inherit;
+    padding: 5px;
 }
 
 .backGroundImageWelcome {
     background-image: url("../img/bridge-tournament.jpg");
     background-size: cover;
+    height: 80%;
+    width: inherit;
 }
+
+.welcomeMessage{
+    padding: 10px;
+}
+
+input[type=button], input[type=submit] {
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+/*  */
+
+.rightSideContent {
+    width:30%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.topBoxBlack {
+    display: flex;
+    align-items: center;
+    color: white;
+    background-color: black;
+    width: inherit;
+    padding: 5px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(odd){background-color: #f2f2f2}
